kubernetes/user/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user
  labels:
    app.kubernetes.io/name: user
    app.kubernetes.io/instance: user
