kubernetes/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-crud-deployment
  namespace: user
  labels:
    app: users-crud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-crud
  template:
    metadata:
      labels:
        app: users-crud
    spec:
      containers:
      - name: users-crud
        image: gcr.io/reflecting-surf-381016/user-crud:latest
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /user/health
            port: http
        readinessProbe:
          httpGet:
            path: /user/health
            port: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      serviceAccountName: user-sa
