kubernetes/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-crud-service
  namespace: user
spec:
  selector:
    app: users-crud
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
