kubernetes/user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-crud-ingress
  namespace: user
spec:
  ingressClassName: nginx
  rules:
    - host: cloudgeek.co.uk
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-crud-service
                port:
                  name: http
